Visit Perscription perfected

--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.html
@@ -1,8 +1,8 @@
 <div class="main-container stretch-container">
     <div class="side submitter-side primary-radius">
         <div class="prescription-navigation">
-            <button class="secondary-button" [class.selected]="navigationOption == 1" (click)="navigationOption = 1">Saisir un traitment</button>
-            <button class="secondary-button" [class.selected]="navigationOption == 2" (click)="navigationOption = 2">Biblioteque de traitments</button>
+            <button class="secondary-button" [class.selected]="navigationOption == 1" (click)="navigationOption = 1">Traitement manuel</button>
+            <button class="secondary-button" [class.selected]="navigationOption == 2" (click)="navigationOption = 2">Bibliothèque de Traitements</button>
         </div>
         <div *ngIf="navigationOption == 1">
             <app-drug-submitter [visitDrugDosages]="visit.visitDrugDosages"></app-drug-submitter>
