--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.css
@@ -20,9 +20,12 @@
 
 .prescription-navigation button {
     outline: none;
-    width: 200px;
+    width: 50%;
     padding: 8px 12px !important;
     border-radius: 20px;
+    box-shadow: none;
+    color: #888;
+    font-size: 14px
 }
 
 .prescription-navigation button:last-child {
@@ -30,11 +33,10 @@
 }
 
 .prescription-navigation button.selected {
-    background: rgb(38, 94, 215);
-    color: white;
+    color: rgb(38, 94, 215);
 }
 
-.prescription-navigation button:not(.selected):hover {
+.prescription-navigation button:hover {
     background: white;
     color: rgb(38, 94, 215);
 }
