--- a/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up/check-up.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-check-up/check-up-submitter/check-up-type/check-up/check-up.component.css
@@ -23,8 +23,8 @@
 }
 
 .main-container i.selected {
-    border-color: rgb(38, 94, 215);
-    color: rgb(38, 94, 215);
+    border-color: rgb(38, 94, 215) !important;
+    color: rgb(38, 94, 215) !important;
 }
 
 .main-container p {
