--- a/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-submitter/certificat-editor/certificat-editor.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-certificates/certificat-submitter/certificat-editor/certificat-editor.component.html
@@ -2,7 +2,7 @@
     <div class="header">
         <i class="fa fa-chevron-left" (click)="back()"></i>
         <h5 class="title">
-            Rédiger le {{(certificat.certificatModel.type == 'Certificat') ? ("Certificat Médical") : ("Compte-Rendu")}}
+            Rédiger {{(certificat.certificatModel.type == 'Certificat') ? ("une Certificat Médical") : ("un Compte-Rendu")}}
         </h5>
 
     </div>
