Visit Documents perfected

--- a/src/app/components/dashboard/content/patient-visit/visit-documents/document-submitter/document-submitter.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-documents/document-submitter/document-submitter.component.css
@@ -35,3 +35,8 @@ textarea {
 .control button:last-child {
     float: right;
 }
+
+.secondary-button:hover {
+    background: rgb(254, 101, 85);
+    color: white;
+}
