--- a/src/app/components/global/date-interval/date-interval.component.html
+++ b/src/app/components/global/date-interval/date-interval.component.html
@@ -11,7 +11,7 @@
             </select>
         </div>
     </div>
-    <div class="row" *ngIf="selectedOption == 'custumizable'">
+    <div class="row" *ngIf="selectedOption == 'Customizable'">
         <div class="col col-md-6">
             <input type="date" class="primary-input" (change)="inputChange()" [(ngModel)]="startDate">
         </div>
