--- a/src/app/components/global/search-header/search-header.component.html
+++ b/src/app/components/global/search-header/search-header.component.html
@@ -1,20 +1,20 @@
 <div class="main-container primary-radius">
     <div class="stretch-container">
         <div class="search-input">
-            <input type="text" [(ngModel)]="searchQuery.searchQuery" placeholder="Recherché nom , prénom , email , telephone , date de n'assance" class="primary-input">
+            <input type="text" [(ngModel)]="searchQuery.searchQuery" placeholder="Rechercher nom prénom email telephone date de n'assance" class="primary-input">
         </div>
         <div class="address">
-            <input type="text" placeholder="Address" class="primary-input" [(ngModel)]="searchQuery.address">
+            <input type="text" placeholder="Adresse" class="primary-input" [(ngModel)]="searchQuery.address">
         </div>
         <div class="wilaya">
             <select (change)="wilayaSelected()" [(ngModel)]="searchQuery.wilayaId">
-                <option  hidden [value]="undefined">Selectioner</option>
+                <option  hidden [value]="undefined">Wilaya</option>
                 <option *ngFor="let wilaya of wilayas" [value]="wilaya.id">{{wilaya.name}}</option>
             </select>
         </div>
         <div class="commune">
             <select *ngIf="selectedWilaya" [(ngModel)]="searchQuery.communeId">
-                <option  hidden [value]="undefined">Selectioner</option>
+                <option  hidden [value]="undefined">Commune</option>
                 <option *ngFor="let commune of selectedWilaya.communes" [value]="commune.id">{{commune.name}}</option>
             </select>
         </div>
@@ -23,7 +23,7 @@
             <i class="fa fa-search" (click)="search()"></i>
         </div>
         <div class="advanced-search">
-            <a (click)="openAdvancedSearch()">recherche avancé</a>
+            <a (click)="openAdvancedSearch()">Recherche Avancée            </a>
         </div>
         <div class="add-button center-v" *ngIf="addOption">
             <i class="fa fa-plus" (click)="addEvent.emit()"></i>
