Appointments manager perfected

--- a/src/app/components/dashboard/content/patient-visit/visit-appointment/visit-appointment.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-appointment/visit-appointment.component.html
@@ -31,7 +31,7 @@
             </div>
             <div class="row">
                 <div class="col col-md-6">
-                    <button class="secondary-button" (click)="clear()">Annuler</button>
+                    <button class="secondary-button" (click)="clear()">Supprimer <i class="fa fa-trash"></i></button>
                 </div>
                 <div class="col col-md-6">
                     <button class="primary-button" [disabled]="!form.valid" (click)="submit()">Validé <i class="fa fa-check"></i></button>
