--- a/src/app/components/dashboard/content/visits-and-appointments-manager/rdvmanager/rdvsearch-header/rdvsearch-header.component.html
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/rdvmanager/rdvsearch-header/rdvsearch-header.component.html
@@ -2,17 +2,17 @@
 
     <div class="stretch-container">
         <div class="search-input">
-            <input type="text" [(ngModel)]="searchQuery.searchQuery" placeholder="Recherché par nom prénom naissance telephone email" class="primary-input">
+            <input type="text" [(ngModel)]="searchQuery.searchQuery" placeholder="Rechercher nom prénom email telephone date de n'assance" class="primary-input">
         </div>
         <div class="hint center-v">
-            <p>Date debute</p>
+            <p>Débute</p>
         </div>
         <div class="date-input">
             <input type="date" placeholder="Date de debut" class="primary-input" [(ngModel)]="startDate">
         </div>
 
         <div class="hint center-v">
-            <p>Date de Fin </p>
+            <p>Fin </p>
         </div>
         <div class="date-input">
             <input type="date" placeholder="Date de debut" class="primary-input" [(ngModel)]="searchQuery.endDate">
