--- a/src/app/components/dashboard/content/visits-and-appointments-manager/rdvmanager/rdvmanager.component.css
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/rdvmanager/rdvmanager.component.css
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-size: 12px;
     margin: 16px -8px;
+    text-align: center;
 }
 
 .body {
@@ -33,6 +34,7 @@
 
 .appointment-row span {
     width: 50%;
-    color: #555555;
+    color: #777;
     font-size: 13px;
+    text-align: center;
 }
