--- a/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-advanced-search/visit-advanced-search.component.html
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-advanced-search/visit-advanced-search.component.html
@@ -45,7 +45,7 @@
         <div class="col col-md-6">
             <select [(ngModel)]="searchQuery.status">
             <option  [value]="undefined">Tout</option>      
-            <option *ngFor="let state of dataService.status" [value]="state">{{state}}</option>
+            <option *ngFor="let state of status" [value]="state">{{state}}</option>
         </select>
         </div>
         <div class="col col-md-6">
