--- a/src/app/components/dashboard/content/waiting-room/new-medical-file/antecedents-submitter/antecedents-submitter.component.html
+++ b/src/app/components/dashboard/content/waiting-room/new-medical-file/antecedents-submitter/antecedents-submitter.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <h5>
-        Gestion des antecedents <i class="fa fa-times" (click)="closeEvent.emit()"></i>
+        Gestion des Antécédents <i class="fa fa-times" (click)="closeEvent.emit()"></i>
     </h5>
     <div class="stretch-container">
         <div class="types">
