--- a/src/app/components/dashboard/content/waiting-room/new-visit/mini-medical-file/mini-medical-file.component.css
+++ b/src/app/components/dashboard/content/waiting-room/new-visit/mini-medical-file/mini-medical-file.component.css
@@ -29,15 +29,16 @@
 .info-side {
     padding: 16px;
     display: block;
-    min-width: 100%;
+    width: 100%;
 }
 
 .info-side h5 {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
     color: #555555;
     margin: 0px;
     margin-bottom: 6px;
+    text-transform: capitalize;
 }
 
 p {
@@ -125,4 +126,9 @@ p i {
 .main-container.clickable:hover {
     cursor: pointer;
     background: #eee;
+}
+
+.age {
+    color: rgb(254, 101, 85);
+    float: right;
 }
